// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dropdown Dropdown Button 1`] = `
<div
  className="my-dropdown-class main-wrapper"
  style={Object {}}
>
  <button
    aria-controls="dropdown-4"
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup={true}
    className="button button-default button-medium pill-shape icon-right"
    defaultChecked={false}
    disabled={false}
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    <span>
      <span
        aria-hidden={false}
        className="icon icon-wrapper"
        role="presentation"
      >
        <svg
          role="presentation"
          style={
            Object {
              "height": "20px",
              "width": "20px",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
            style={
              Object {
                "fill": "currentColor",
              }
            }
          />
        </svg>
      </span>
      <span
        className="button-text-medium"
      >
        Click button start
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Dropdown Dropdown Div 1`] = `
<div
  className="my-dropdown-class main-wrapper"
  style={Object {}}
>
  <div
    aria-controls="dropdown-5"
    aria-expanded={false}
    aria-haspopup={true}
    className="reference-wrapper"
    onClick={[Function]}
    role="button"
    style={
      Object {
        "display": "flex",
      }
    }
    tabIndex="0"
  >
    <code>
      HTMLDivElement
    </code>
    <span
      aria-hidden={false}
      className="icon-wrapper"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
  </div>
</div>
`;
